--- a/app/globals.css
+++ b/app/globals.css
@@ -220,38 +220,95 @@ transform: scale(1.04);
 }
 
 
-.inp_vol{
-  bottom: 1rem;
-}
 
 
 
-input[type="range"] {
+
+.custom-range {
+  width: 100%;
+  border-radius: 1rem;
   position: absolute;
-  width: 6rem;
-  height: 0.75rem;
-  background-color: rgba(79, 209, 197, 0.75);
-  border-radius: 9999px;
-  opacity: 0.75;
+  height: 8px;
+  bottom: 1rem;
+  opacity : 0.8;
+  -webkit-appearance: none;
+  background-color: rgba(186, 126, 62, 0.562);
+  cursor: pointer;
 }
 
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  appearance: none;
-  width: 1rem;
-  height: 1rem;
-  background-color: #d88d1d;
-  border: 2px solid #d8a91d;
-  border-radius: 50%;
-  cursor: pointer;
+  background-color: #ff6f00;
+  opacity: 0.8;
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
 }
 
-input[type="range"]::-webkit-slider-thumb:hover {
-  background-color: #2563eb;
-  border-color: #2563eb;
+
+.custom-range::-webkit-slider-runnable-track {
+  background-color: rgba(255, 166, 0, 0);
 }
 
-input[type="range"]::-webkit-slider-thumb:focus {
-  outline: none;
-  box-shadow: 0 0 0 3px rgba(29, 78, 216, 0.5);
+.custom-range::-webkit-slider-thumb {
+  background-color: darkorange;
+}
+
+.custom-range::-moz-range-track {
+  background-color: orange;
+}
+
+.custom-range::-moz-range-thumb {
+  background-color: darkorange;
+}
+
+.custom-range::-ms-track {
+  background-color: orange;
+}
+
+.custom-range::-ms-thumb {
+  background-color: darkorange;
+}
+
+.custom-range::-ms-fill-lower {
+  background-color: orange;
+}
+
+
+
+
+.loficard {
+  position: relative;
+}
+
+.loficard::before {
+  content: attr(meratitle);
+  position: absolute;
+  top: 50%; /* Adjust the distance from the image */
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 179, 255, 0.338);
+  color: white;
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-size: 1rem;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s ease-in-out;
+
+  z-index: 200;
+}
+
+.loficard:hover::before {
+  opacity: 1;
+}
+
+
+/* .loficard:active{
+  box-shadow: 0px 0px 10px 10px rgba(0, 170, 255, 0.199);
+} */
+
+
+.active{
+  box-shadow: 0px 0px 5px 10px rgba(8, 114, 212, 0.537);
 }
