--- a/app/globals.css
+++ b/app/globals.css
@@ -11,12 +11,11 @@
   /* background: black; */
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   display: none;
 }
 
-
-.heading_of_app{
+.heading_of_app {
   margin-top: 7rem;
 }
 
@@ -25,8 +24,7 @@
   font-family: "Barlow", sans-serif;
 }
 
-
-.main_lofi{
+.main_lofi {
   margin-top: 3.5rem;
 }
 .container {
@@ -81,13 +79,7 @@
   font-size: 3rem;
 }
 
-
-
-
-
-
-
-.heading_of_app{
+.heading_of_app {
   transition: all 2s ease-in-out;
 }
 .head_text {
@@ -160,42 +152,40 @@
   }
 }
 
-
-
-.img_main{
+.img_main {
   transition: all 0.4s linear;
 }
 
-.img_main:hover{
-transform: scale(1.04);
+.img_main:hover {
+  transform: scale(1.04);
 }
 
-.img_main:active{
+.img_main:active {
   transform: scale(0.96);
 }
 
-.build_with,.name{
+.build_with,
+.name {
   font-size: 1rem;
   font-weight: 500;
   color: white;
 }
 
-.icons{
+.icons {
   display: flex;
 }
-
 
 @media (max-width: 745px) {
   .container {
     margin: 0px 0rem 0px 0rem;
   }
   .navbar {
-    width:100%;
+    width: 100%;
     margin-left: 0rem !important;
     margin-right: 0rem !important;
   }
 
-  .social{
+  .social {
     margin-right: 0.5rem;
   }
 }
@@ -207,7 +197,8 @@ transform: scale(1.04);
     font-weight: 800;
     color: white;
   }
-  .build_with,.name{
+  .build_with,
+  .name {
     font-size: 0.7rem;
     font-weight: 500;
     color: white;
@@ -219,18 +210,13 @@ transform: scale(1.04);
   }
 }
 
-
-
-
-
-
 .custom-range {
   width: 100%;
   border-radius: 1rem;
   position: absolute;
   height: 8px;
   bottom: 1rem;
-  opacity : 0.8;
+  opacity: 0.8;
   -webkit-appearance: none;
   background-color: rgba(186, 126, 62, 0.562);
   cursor: pointer;
@@ -244,7 +230,6 @@ input[type="range"]::-webkit-slider-thumb {
   height: 15px;
   border-radius: 100%;
 }
-
 
 .custom-range::-webkit-slider-runnable-track {
   background-color: rgba(255, 166, 0, 0);
@@ -274,9 +259,6 @@ input[type="range"]::-webkit-slider-thumb {
   background-color: orange;
 }
 
-
-
-
 .loficard {
   position: relative;
 }
@@ -303,12 +285,112 @@ input[type="range"]::-webkit-slider-thumb {
   opacity: 1;
 }
 
-
 /* .loficard:active{
   box-shadow: 0px 0px 10px 10px rgba(0, 170, 255, 0.199);
 } */
 
+.active0 {
+  box-shadow: 0px 0px 20px 10px rgba(23, 163, 184, 0.7);
+  animation: twinkling 3s ease-in-out infinite;
+}
 
-.active{
-  box-shadow: 0px 0px 5px 10px rgba(8, 114, 212, 0.537);
+.active1 {
+  box-shadow: 0px 0px 20px 10px rgba(218, 112, 214, 0.7);
+  animation: twinkling 3s ease-in-out infinite;
+}
+
+.active2 {
+  box-shadow: 0px 0px 20px 10px rgba(86, 204, 242, 0.7);
+  animation: twinkling 3s ease-in-out infinite;
+}
+
+.active3 {
+  box-shadow: 0px 0px 20px 10px rgba(255, 184, 108, 0.7);
+  animation: twinkling 3s ease-in-out infinite;
+}
+
+.active4 {
+  box-shadow: 0px 0px 20px 10px rgba(253, 214, 165, 0.7);
+  animation: twinkling 3s ease-in-out infinite;
+}
+
+.active5 {
+  box-shadow: 0px 0px 20px 10px rgba(114, 208, 236, 0.7);
+  animation: twinkling 3s ease-in-out infinite;
+}
+
+.active6 {
+  box-shadow: 0px 0px 20px 10px rgba(140, 198, 63, 0.7);
+  animation: twinkling 3s ease-in-out infinite;
+}
+
+.active7 {
+  box-shadow: 0px 0px 20px 10px rgba(219, 131, 6, 0.7);
+  animation: twinkling 3s ease-in-out infinite;
+}
+
+.active8 {
+  box-shadow: 0px 0px 20px 10px rgba(117, 200, 204, 0.7);
+  animation: twinkling 3s ease-in-out infinite;
+}
+
+@keyframes twinkling {
+  0% {
+    box-shadow: 0px 0px 20px 10px rgba(23, 163, 184, 0.7);
+  }
+  50% {
+    box-shadow: 0px 0px 20px 10px rgba(218, 112, 214, 0.7);
+  }
+  100% {
+    box-shadow: 0px 0px 20px 10px rgba(23, 163, 184, 0.7);
+  }
+}
+
+.timer_text {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.653);
+  font-weight: 800;
+}
+
+.todomodel,.notes-textarea {
+  background: rgba(255, 255, 255, 0.08);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.7px);
+  -webkit-backdrop-filter: blur(6.7px);
+}
+
+.ant-modal-content {
+  background: rgba(255, 255, 255, 0.06) !important;
+  border-radius: 16px !important;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1) !important;
+  backdrop-filter: blur(10px) !important;
+  -webkit-backdrop-filter: blur(10px) !important;
+  border: 1px solid rgba(255, 255, 255, 0.3) !important;
+}
+
+.ant-modal-title {
+  background-color: #ffffff4e !important;
+  display: none !important;
+}
+
+.notes-textarea{
+  width: 100%;
+  height: 100%;
+  border: none;
+  padding: 1rem;
+  color: white;
+
+  font-size: 1rem;
+  font-weight: 700;
+  
+}
+
+
+.ant-btn {
+  display: none !important;
+}
+
+.ant-modal-close-x {
+  display: none !important;
 }
